Changes in Layout For Grid Layouts

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,8 @@
 
 <resources>
     <color name="window_background">#FFF5F5F5</color>
+    <color name="color_tiled">#2196F3</color>
+    <color name="color_tiled_dark">#1976D2</color>
+    <color name="accent_color">#ffffff</color>
+
 </resources>
