--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,8 +16,9 @@
   -->
 
 <resources>
-    <dimen name="detail_backdrop_height">106dp</dimen>
+    <dimen name="detail_backdrop_height">150dp</dimen>
     <dimen name="card_margin">16dp</dimen>
+    <dimen name="card_margin_songs">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="list_item_avatar_size">40dp</dimen>
 </resources>
