--- a/app/src/main/res/layout/activity_aboutme_details.xml
+++ b/app/src/main/res/layout/activity_aboutme_details.xml
@@ -15,11 +15,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-        tools:context="com.support.android.musicindia.NowPlaying">
+        tools:context=".activities.NowPlaying">
 
-        <android.support.design.widget.AppBarLayout
+        <!--<android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="350sp"
+            android:layout_height="250dp"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             android:fitsSystemWindows="true"
             >
@@ -33,8 +33,8 @@
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
                 app:contentScrim="?attr/colorPrimary"
-                app:expandedTitleMarginStart="48sp"
-                app:expandedTitleMarginEnd="64sp">
+                app:expandedTitleMarginStart="48dp"
+                app:expandedTitleMarginEnd="64dp">
 
 
 
@@ -56,7 +56,7 @@
                     app:layout_collapseMode="pin"/>
             </android.support.design.widget.CollapsingToolbarLayout>
 
-        </android.support.design.widget.AppBarLayout>
+        </android.support.design.widget.AppBarLayout>-->
 
         <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
@@ -68,19 +68,45 @@
             android:focusableInTouchMode="false"
             android:id="@+id/nestedSongs"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+            <ImageView
+                android:id="@+id/backdrop"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:scaleType="centerCrop"
+                android:src="@drawable/aboutmedpfb"
+                android:fitsSystemWindows="true"
+                app:layout_collapseMode="parallax"
+                />
+
+            <android.support.v7.widget.CardView
+                android:id = "@+id/cardMovies"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
+
+            <LinearLayout
+                style="@style/Widget.CardContent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:layout_marginTop="20sp"
+                android:layout_marginTop="0dp"
                 android:fillViewport="true"
 
                 >
                 <RelativeLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="25sp"
+                    android:layout_marginLeft="5dp"
                     android:layout_weight="1"
                     >
 
@@ -90,7 +116,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text = "Amit Agarwal"
-                        android:textSize="20sp"
+                        android:textSize="20dp"
                         android:textColor="@color/black"
                         android:layout_weight = "10"/>
                     <LinearLayout
@@ -98,66 +124,76 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/viewProfile"
-                        android:layout_marginTop="10sp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginRight="10dp"
                         android:orientation="horizontal"
                         android:layout_weight = "40"
                         >
                         <ImageButton
                             android:id="@+id/fblink"
-                            android:layout_width="100sp"
-                            android:layout_height="50sp"
+                            android:layout_height="50dp"
                             android:src="@drawable/ic_facebook_white_24dp"
                             android:background="#3b5998"
+                            android:foreground="?android:attr/selectableItemBackground"
+                            android:layout_weight="10"
+                            android:layout_width="wrap_content"
                             />
-                            />
+
 
                         <ImageButton
                             android:id="@+id/twitterlink"
-                            android:layout_width="100sp"
-                            android:layout_height="50sp"
-                            android:layout_marginLeft="10sp"
+                            android:layout_weight="10"
+                            android:layout_height="50dp"
+                            android:layout_width="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:foreground="?android:attr/selectableItemBackground"
                             android:src="@drawable/ic_twitter_white_24dp"
-                            android:background="#4099FF"/>
+                            android:background="#4099FF"
+                            />
 
                         <ImageButton
                             android:id="@+id/googlepluslink"
-                            android:layout_width="100sp"
-                            android:layout_height="50sp"
-                            android:layout_marginLeft="10sp"
+                            android:layout_weight="10"
+                            android:layout_width="wrap_content"
+                            android:layout_height="50dp"
+                            android:foreground="?android:attr/selectableItemBackground"
+                            android:layout_marginLeft="10dp"
                             android:src="@drawable/ic_google_plus_white_24dp"
-                            android:background="#D50F25"/>
+                            android:background="#D50F25"
+                            />
 
                     </LinearLayout>
-                    <RelativeLayout
-                        android:layout_below="@+id/linearLayout"
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="20sp"
-                        android:layout_weight = "50"
                         android:id="@+id/relLayout"
-                        >
+                        android:layout_marginRight="10dp"
+                        android:layout_marginTop="5dp"
+                        android:orientation="horizontal"
+                        android:layout_below="@+id/linearLayout">
+
                     <TextView
 
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Apps on Play Store"
-                        android:textSize="20sp"
-                        android:layout_marginTop="10sp"
+                        android:textSize="20dp"
+                        android:layout_marginTop="10dp"
                         android:id="@+id/appsonplaystore"
                         android:textColor="@color/black"
-
                         />
 
-                    <ImageButton
+                    <at.markushi.ui.CircleButton
                         android:id="@+id/playstore"
-                        android:layout_width="100sp"
-                        android:layout_height="50sp"
-                        android:layout_toRightOf="@+id/appsonplaystore"
-
-                        android:layout_marginLeft="50sp"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_marginLeft="20dp"
                         android:src="@drawable/ic_google_play_white_24dp"
-                        android:background="@color/primary"/>
-                    </RelativeLayout>
+                        app:cb_color="@color/notifBuilder"
+                        app:cb_pressedRingWidth="8dip"
+                        />
+
+                    </LinearLayout>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -165,15 +201,16 @@
                         android:id="@+id/totalInstalls"
                         android:text="Total Installs: N/A"
                         android:layout_below="@+id/relLayout"
-                        android:textSize="20sp"
-                        android:layout_marginTop="20dp"
+                        android:textSize="15dp"
+                        android:layout_marginTop="5dp"
                         android:textColor="@color/black"/>
 
                 </RelativeLayout>
 
             </LinearLayout>
-
-
+            </LinearLayout>
+            </android.support.v7.widget.CardView>
+            </LinearLayout>
         </android.support.v4.widget.NestedScrollView>
 
 
