--- a/app/src/main/res/layout/activity_search_songs_details.xml
+++ b/app/src/main/res/layout/activity_search_songs_details.xml
@@ -6,6 +6,8 @@
     android:id="@+id/drawer_layout_songs"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="false"
     android:fitsSystemWindows="true">
     <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -28,7 +30,7 @@
                 android:layout_height="?attr/actionBarSize"
                 android:background="?attr/colorPrimary"
                 app:layout_scrollFlags="scroll|enterAlways|snap"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+                app:popupTheme="@style/Theme.DesignDemo.PopupOverlay" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -48,6 +50,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fillViewport="true"
+            android:focusable = "false"
+            android:descendantFocusability="beforeDescendants"
+            android:focusableInTouchMode="false"
             android:id="@+id/nestedSongs"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
@@ -72,26 +77,35 @@
                                 android:layout_marginLeft="20dp"
                                 android:textSize="20dp"
                                 android:layout_marginBottom="10dp"/>
-                            <RelativeLayout
+                            <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_below="@+id/searchSongTextView"
                                 android:layout_height="wrap_content">
+                            <!--<RelativeLayout
+                                android:layout_width="match_parent"
+                                android:layout_below="@+id/searchSongTextView"
+                                android:layout_height="wrap_content">-->
                             <EditText
                                 android:id="@+id/songNameEditText"
-                                android:layout_width="200dp"
-                                android:layout_marginLeft="20dp"
+                                android:layout_width="180dp"
+                                android:layout_weight="70"
+                                android:layout_marginLeft="10dp"
                                 android:layout_height="60dp"
                                 android:layout_marginRight="15dp"
                             />
                             <Button
-                                android:background="@color/primary"
                                 android:layout_width="100dp"
-                                android:layout_height="60dp"
+                                android:layout_height="50dp"
                                 android:id="@+id/searchSongButton"
                                 android:text="Search"
+                                android:layout_marginRight="15dp"
+                                android:layout_weight="30"
+                                android:background="@drawable/button_corner"
+                                android:foreground="?android:attr/selectableItemBackground"
                                 android:textColor="@color/white"
-                                android:layout_toRightOf="@+id/songNameEditText"/>
-                            </RelativeLayout>
+                                />
+                            <!--</RelativeLayout>-->
+                            </LinearLayout>
                         </RelativeLayout>
 
                 <android.support.v7.widget.CardView
@@ -115,7 +129,7 @@
                             android:id="@+id/recycler_view_movie_songs"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:focusable="false"
+                            android:focusable="true"
                             android:clipToPadding="false"
                             android:paddingTop="0dp"/>
 
