--- a/app/src/main/res/layout/card_view_list.xml
+++ b/app/src/main/res/layout/card_view_list.xml
@@ -16,8 +16,10 @@
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:contentDescription="@string/action_settings"
-            android:background="@mipmap/ic_launcher"
+            android:src="@drawable/ic_launcher"
             android:scaleType="fitXY"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
             android:adjustViewBounds="true"
             />
         <TextView
@@ -29,6 +31,8 @@
             android:textColor="#000000"
             android:layout_below="@+id/country_photo"
             android:paddingBottom="4dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
             android:paddingLeft="5dp"
             android:paddingTop="4dp"
             android:layout_alignParentBottom="true"
