--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -17,8 +17,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="10dp"
+            android:text="Amit"
             android:textSize="18dp"
             android:textColor="#c23df2"
+            android:background="?android:attr/selectableItemBackground"
             android:textAppearance="?attr/textAppearanceListItem"
             android:layout_weight="1"
             />
