--- a/app/src/main/res/layout/list_tracks_item.xml
+++ b/app/src/main/res/layout/list_tracks_item.xml
@@ -37,11 +37,12 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentBottom="true"
-            android:paddingTop="15dp"
+            android:paddingTop="10dp"
             android:textSize="15dp"
             android:text="SongName"
             android:textColor="@color/black"
             android:maxLines="1"
+            android:background="?android:attr/selectableItemBackground"
             android:ellipsize="end"
             android:paddingRight="80dp"
             android:gravity="left"/>
