--- a/app/src/main/res/layout/splash_main.xml
+++ b/app/src/main/res/layout/splash_main.xml
@@ -5,35 +5,60 @@
     android:id="@+id/drawer_layout"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:background="@color/notifBuilder"
+    android:background="@drawable/ic_musicindia"
     android:fitsSystemWindows="true">
 
     <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         >
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:id="@+id/layout1"
         android:layout_centerHorizontal="true"
         >
+        <RelativeLayout
+            android:textAlignment="center"
+            android:layout_width="match_parent"
+            android:gravity="center|center_vertical"
+            android:layout_height="match_parent"
+            android:layout_weight="50"
+            android:id="@+id/relLayoutone">
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_gravity="center"
+        android:layout_marginTop="35dp"
+        android:layout_marginLeft="-5dp"
+        android:id="@+id/launcherIcon"
         android:src="@mipmap/ic_launcher"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/app_name"
-            android:layout_marginTop="5dp"
-            android:layout_gravity="center"
+            android:layout_marginTop="40dp"
+            android:typeface="serif"
+            android:layout_toRightOf="@+id/launcherIcon"
+            android:layout_marginLeft="5dp"
             android:textColor="@color/white"
             android:textSize="35dp"/>
+        </RelativeLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="50"
+            android:orientation="vertical"
+            >
+        <!--<LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@color/primary"
+            android:orientation="vertical"
+            android:>-->
         <ProgressBar
             android:id="@+id/splashProgressBar"
             android:layout_width="wrap_content"
@@ -42,7 +67,8 @@
             android:layout_marginBottom="10dp"
             android:layout_gravity="center"
             android:visibility="invisible"
-            android:scrollbarStyle="insideInset"/>
+            android:scrollbarStyle="insideInset"
+            android:indeterminate="false" />
         <TextView
             android:id="@+id/loadingDataSplash"
             android:layout_width="wrap_content"
@@ -51,13 +77,17 @@
             android:visibility="invisible"
             android:layout_gravity="center"
             android:textColor="@color/white"
+            android:background="@color/black"
             android:layout_marginTop="10dp"
+            android:padding="10dp"
             android:layout_marginBottom="10dp"
             android:textSize="20dp"/>
 
+        <!--</LinearLayout>-->
+
         <Button
             android:id="@+id/startAsPlayer"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Open in Offline Mode"
             android:layout_marginLeft="20dp"
@@ -65,24 +95,26 @@
             android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="10dp"
-            android:paddingRight="10dp"
+            android:paddingRight="20dp"
             android:textColor="@color/white"
-            android:paddingLeft="10dp"
-            android:background="@color/primary"/>
+            android:paddingLeft="20dp"
+            android:background="@drawable/button_corner"
+            android:foreground="?android:attr/selectableItemBackground"/>
         <Button
             android:id="@+id/tryAgain"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Open in Online Mode"
-            android:paddingRight="10dp"
-            android:paddingLeft="10dp"
+            android:paddingRight="20dp"
+            android:paddingLeft="20dp"
             android:visibility="visible"
             android:textColor="@color/white"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:background="@color/primary"/>
+            android:background="@drawable/button_corner"
+            android:foreground="?android:attr/selectableItemBackground"/>
 
-
+        </LinearLayout>
     </LinearLayout>
 
 
