--- a/app/src/main/res/layout/titleandimageonly_header.xml
+++ b/app/src/main/res/layout/titleandimageonly_header.xml
@@ -31,6 +31,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:singleLine="true"
         android:ellipsize="marquee"
+        android:background="?android:attr/selectableItemBackground"
         android:marqueeRepeatLimit="marquee_forever"
         android:scrollHorizontally="true"/>
 
